--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "start": "nodemon server.js"
   },
   "keywords": [],
@@ -27,12 +30,19 @@
     "multer": "^2.0.1",
     "path": "^0.12.7",
     "pg": "^8.16.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "session-file-store": "^1.5.0",
     "validator": "^13.15.15",
     "ws": "^8.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@babel/core": "^7.27.4",
+    "@babel/preset-react": "^7.27.1",
+    "@vitejs/plugin-react": "^4.5.2",
+    "babel-loader": "^10.0.0",
+    "nodemon": "^3.1.10",
+    "vite": "^6.3.5"
   },
   "repository": {
     "type": "git",
