--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --force",
     "build": "vite build",
     "preview": "vite preview",
     "start": "nodemon server.js"
@@ -41,8 +41,7 @@
     "@babel/preset-react": "^7.27.1",
     "@vitejs/plugin-react": "^4.5.2",
     "babel-loader": "^10.0.0",
-    "nodemon": "^3.1.10",
-    "vite": "^6.3.5"
+    "nodemon": "^3.1.10"
   },
   "repository": {
     "type": "git",
